# SFU_PhD

./: README.md
Projects/Semantic-SplatBridge/Codes/: README.md  Tips.txt  pyproject.toml  save_rgb_depth_from_bag.py
Projects/Semantic-SplatBridge/Codes/configs/: front_spot.json  modal.json  modal500.json  zed.json
Projects/Semantic-SplatBridge/Codes/configs/static_transforms/: front_spot.json  modal.json
Projects/Semantic-SplatBridge/Codes/nerfbridge/: eval.py  method_configs.py  pointcloud_utils.py  pose_utils.py  ros_dataloader.py  ros_datamanager.py  ros_dataparser.py  ros_dataset.py  ros_pipeline.py  ros_splatfacto.py  ros_trainer.py  ros_viewer.py  rtguide_pipeline.py  rtguide_splatfacto.py  viewer_utils.py  writer.py
Projects/Semantic-SplatBridge/Codes/nerfbridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
Projects/Semantic-SplatBridge/Codes/nerfbridge/features/: clip_extract.py  clip_wrapper.py
Projects/Semantic-SplatBridge/Codes/nerfbridge/features/clip/: __init__.py  clip.py  interpolate.py  model.py  simple_tokenizer.py
Projects/Semantic-SplatBridge/Codes/outputs/configs/ros-depth-splatfacto/2025-09-15_113744/: config.yml
Projects/Semantic-SplatBridge/Codes/outputs/configs/ros-depth-splatfacto/2025-09-15_114644/: config.yml  (+1 more)
Projects/Semantic-SplatBridge/Codes/outputs/latest_run/: config.yml
Projects/Semantic-SplatBridge/Codes/scripts/: download_data.py  eval_model.py  get_tf_transforms.py  view_model.py
Projects/Semantic-SplatBridge/Codes/tiny-cuda-nn-install/lib/pkgconfig/: fmt.pc
(+89 files in other folders)
