[project]
name = "nerfbridge"
version = "1.1"

dependencies = [
	"nerfstudio==1.1.4",
	"einops",
	"ftfy",
	"regex",
	"torchtyping",
	"opencv-python==4.10.0.84"
]

[tool.setuptools.packages.find]
include = ["nerfbridge*"]

[tool.pyright]
extraPaths = ["nerfbridge"]

[project.entry-points.'nerfstudio.method_configs']
ros-depth-nerfacto = 'nerfbridge.method_configs:RosDepthNerfacto'
ros-depth-splatfacto = 'nerfbridge.method_configs:RosDepthSplatfacto'
rt-guide-splatfacto = 'nerfbridge.method_configs:RTGuideSplatfacto'
